--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.jsx \"test/**/*@(.js|.jsx)\"",
     "test:watch": "npm run test -- --watch",
     "build": "node scripts/bundlify.js",
-    "watch": "node scripts/bundlify.js --watch",
-    "serve": "lr-http-server -p 3000 -d dist/ -l 30000 -w **/*.css,*.html "
+    "watch": "node scripts/bundlify.js --watch"
   },
   "babel": {
     "presets": [
@@ -40,7 +39,6 @@
     "watchify": "^3.7.0"
   },
   "dependencies": {
-    "classnames": "^2.2.5",
     "immutable": "^3.7.6",
     "react": "^15.0.1",
     "react-addons-pure-render-mixin": "^15.0.1",
